--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.2.5"
