--- a/api/Pipfile
+++ b/api/Pipfile
@@ -8,6 +8,7 @@ flask = "==3.0.2"
 requests = "==2.25.1"
 python-dotenv = "==0.15.0"
 flask-cors = "==3.0.10"
+pymongo = "==4.6.2"
 
 [dev-packages]
 black = "==20.8b1"
