--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,8 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: very-strong-db-password
     volumes:
-      - ./mongodb_data:/data/db
+      - mongodb_data:/data/db
+
   mongo-express:
     image: mongo-express
     restart: always
@@ -36,7 +37,8 @@ services:
     environment:
       ME_CONFIG_MONGODB_SERVER: mongo
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: very-strong-db-MONGO_INITDB_ROOT_PASSWORD
+      ME_CONFIG_MONGODB_ADMINPASSWORD: very-strong-db-password
+      ME_CONFIG_MONGODB_URL: mongodb://root:very-strong-db-password@mongo:27017/
     depends_on:
       - mongo
 
